API implementation
- add getAllUsers method to Swagger
