# src/main/java/com/imageanalysis/user/UserBasicDTO.java
@@ -1,0 +1,18 @@
+package com.imageanalysis.user;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserBasicDTO {
+
+    private Long id;
+    private String username;
+    private String avatar;
+    private String firstName;
+    private String lastName;
+    private String email;
+}
